--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1210,6 +1210,31 @@ input[type="radio"] + label:before {
   .icon.brands:before {
     font-family: 'Font Awesome 5 Brands'; }
 
+/* Fab Icon */
+.fab {
+  text-decoration: none;
+  border-bottom: none;
+  position: relative; }
+  .fab:before {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    text-transform: none !important;
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 400; }
+  .fab > .label {
+    display: none; }
+  .fab:before {
+    line-height: inherit; }
+  .fab.solid:before {
+    font-weight: 900; }
+  .fab.brands:before {
+    font-family: 'Font Awesome 5 Brands'; }
+
 /* Image */
 .image {
   border-radius: 0.375em;
@@ -1661,6 +1686,44 @@ button,
         position: absolute;
         top: 50%;
         width: 7em; }
+    
+    .features article .fab {
+      -moz-flex-grow: 0;
+      -webkit-flex-grow: 0;
+      -ms-flex-grow: 0;
+      flex-grow: 0;
+      -moz-flex-shrink: 0;
+      -webkit-flex-shrink: 0;
+      -ms-flex-shrink: 0;
+      flex-shrink: 0;
+      display: block;
+      height: 10em;
+      line-height: 10em;
+      margin: 0 2em 0 0;
+      text-align: center;
+      width: 10em; }
+      .features article .fab:before {
+        color: #23337e;
+        font-size: 2.75rem;
+        position: relative;
+        top: 0.05em; }
+      .features article .fab:after {
+        -moz-transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+        border-radius: 0.25rem;
+        border: solid 2px rgba(210, 215, 217, 0.75);
+        content: '';
+        display: block;
+        height: 7em;
+        left: 50%;
+        margin: -3.5em 0 0 -3.5em;
+        position: absolute;
+        top: 50%;
+        width: 7em; }
+
+
     .features article .content {
       -moz-flex-grow: 1;
       -webkit-flex-grow: 1;
@@ -1697,7 +1760,19 @@ button,
           .features article .icon:after {
             height: 6em;
             margin: -3em 0 0 -3em;
+            width: 6em; } 
+
+        .features article .fab {
+          height: 8em;
+          line-height: 8em;
+          width: 8em; }
+          .features article .fab:before {
+            font-size: 2.25rem; }
+          .features article .fab:after {
+            height: 6em;
+            margin: -3em 0 0 -3em;
             width: 6em; } }
+
   @media screen and (max-width: 480px) {
     .features article {
       -moz-flex-direction: column;
@@ -1718,7 +1793,20 @@ button,
         .features article .icon:after {
           height: 4em;
           margin: -2em 0 0 -2em;
+          width: 4em; } 
+
+      .features article .fab {
+        height: 6em;
+        line-height: 6em;
+        margin: 0 0 1.5em 0;
+        width: 6em; }
+        .features article .fab:before {
+          font-size: 1.5rem; }
+        .features article .fab:after {
+          height: 4em;
+          margin: -2em 0 0 -2em;
           width: 4em; } }
+
   @media screen and (max-width: 480px) {
     .features article .icon:before {
       font-size: 1.25rem; } }
@@ -1773,7 +1861,7 @@ button,
       .posts article .image img {
         display: block;
         width: 100%; }
-  @media screen and (min-width: 1681px) {
+  @media screen and (min-width: 737px) {
     .posts article:nth-child(3n + 1):before {
       display: none; }
     .posts article:nth-child(3n + 1):after {
@@ -1853,9 +1941,9 @@ button,
   -webkit-flex-shrink: 1;
   -ms-flex-shrink: 1;
   flex-shrink: 1;
-  width: 100%; }
+  width: 75%; }
   #main > .inner {
-    padding: 0 6em 0.1em 6em ;
+    padding: 0 14em 0.1em 12em ;
     margin: 0 auto;
     max-width: 110em; }
     #main > .inner > section {
@@ -1929,18 +2017,18 @@ button,
   -ms-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
   transition: margin-left 0.5s ease, box-shadow 0.5s ease;
   background-color: #f5f6f7;
-  font-size: 0.9em;
+  font-size: 0.7em;
   position: relative;
-  width: 26em; }
+  width: 30em; }
   #sidebar h2 {
     font-size: 1.38889em; }
   #sidebar > .inner {
-    padding: 2.22222em 2.22222em 2.44444em 2.22222em ;
+    padding: 8em 2.22222em 2.44444em 2.22222em ;
     position: relative;
-    width: 26em; }
+    width: 30em; }
     #sidebar > .inner > * {
       border-bottom: solid 2px rgba(210, 215, 217, 0.75);
-      margin: 0 0 3.5em 0;
+      margin: 0 0 3.5em 2em;
       padding: 0 0 3.5em 0; }
       #sidebar > .inner > * > :last-child {
         margin-bottom: 0; }
@@ -1964,7 +2052,7 @@ button,
     border: 0;
     display: block;
     height: 7.5em;
-    left: 26em;
+    left: 30em;
     line-height: 7.5em;
     outline: 0;
     overflow: hidden;
@@ -1997,27 +2085,28 @@ button,
       top: 0;
       width: inherit; }
   #sidebar.inactive {
-    margin-left: -26em; }
+    margin-left: -30em; }
   @media screen and (max-width: 1680px) {
     #sidebar {
-      width: 24em; }
+      width: 28em; 
+      font-size: 0.8em;}
       #sidebar > .inner {
-        padding: 1.66667em 1.66667em 1.33333em 1.66667em ;
-        width: 24em; }
+        padding: 8em 2em 1.33333em .5em ;
+        width: 28em; }
         #sidebar > .inner > .alt {
           margin: -1.66667em 0 3.33333em -1.66667em;
           padding: 1.66667em;
           width: calc(100% + 3.33333em); }
       #sidebar .toggle {
         height: 6.25em;
-        left: 24em;
+        left: 28em;
         line-height: 6.25em;
         text-indent: 5em;
         width: 5em; }
         #sidebar .toggle:before {
-          font-size: 1.5rem; }
+          font-size: 1.7rem; }
       #sidebar.inactive {
-        margin-left: -24em; } }
+        margin-left: -28em; } }
   @media screen and (max-width: 1280px) {
     #sidebar {
       box-shadow: 0 0 5em 0 rgba(0, 0, 0, 0.175);
@@ -2113,7 +2202,8 @@ button,
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
-  display: flex; }
+  display: flex; 
+  border-bottom: solid 5px #23337e; }
   #banner h1 {
     margin-top: -0.125em; }
   #banner .content {
@@ -2136,7 +2226,7 @@ button,
     -ms-flex-shrink: 0;
     flex-shrink: 0;
     display: block;
-    margin: 0 0 2em 4em;
+    margin: 0 0 0 4em;
     width: 40%; }
     #banner .image img {
       height: 90%;
@@ -2148,7 +2238,7 @@ button,
       -webkit-object-position: center;
       -ms-object-position: center;
       object-position: center;
-      width: 90%; }
+      width: 100%; }
   @media screen and (orientation: portrait) {
     #banner {
       -moz-flex-direction: column-reverse;
