--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2395,7 +2395,7 @@ button,
 }
 
   .spotlight.style1 .content {
-    padding: 0 7rem 0 0 ;
+    padding: 0 7rem 0 0;
     -moz-align-self: center;
     -webkit-align-self: center;
     -ms-align-self: center;
@@ -2408,9 +2408,7 @@ button,
     -webkit-flex-shrink: 1;
     -ms-flex-shrink: 1;
     flex-shrink: 1;
-    width: 65%;
-    max-width: 64rem;
-    margin: 0 auto;
+    width: 100%;
   }
 
   .spotlight.style1 .image {
@@ -2424,7 +2422,7 @@ button,
     flex-shrink: 0;
     width: 35%;
     min-width: 25rem;
-    border-radius: 0;
+    border-radius: 2em;
   }
 
     .spotlight.style1 .image img {
@@ -2442,13 +2440,13 @@ button,
       left: 0;
       width: 100%;
       height: 100%;
-      border-radius: 0;
+      border-radius: .3em;
     }
 
   @media screen and (max-width: 1680px) {
 
     .spotlight.style1 .content {
-      padding: 5rem 5rem 3rem 5rem ;
+      padding: 0 5rem 0 0 ;
     }
 
   }
@@ -2456,7 +2454,7 @@ button,
   @media screen and (max-width: 1280px) {
 
     .spotlight.style1 .content {
-      padding: 4rem 4rem 2rem 4rem ;
+      padding: 0 4rem 0 0 ;
     }
 
   }
@@ -2464,7 +2462,7 @@ button,
   @media screen and (max-width: 980px) {
 
     .spotlight.style1 .content {
-      padding: 3.75rem 3rem 1.75rem 3rem ;
+      padding: 3.70 3rem 1.70 0 ;
       width: 50%;
       min-width: 0;
     }
@@ -2491,7 +2489,6 @@ button,
     -webkit-flex-direction: column-reverse;
     -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
-    text-align: center !important;
   }
 
     .spotlight.style1 .content {
@@ -2499,7 +2496,8 @@ button,
     }
 
     .spotlight.style1 .image {
-      width: 100%;
+      width: 50%;
+      align-self: center;
     }
 
       .spotlight.style1 .image img {
